--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@trpc/next": "^10.34.0",
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
+    "drizzle-orm": "^0.28.5",
     "next": "^13.4.2",
+    "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
